@@ -15,6 +15,7 @@ import org.mockito.Matchers;
 import java.lang.management.ThreadInfo;
 import java.lang.management.ThreadMXBean;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
@@ -28,11 +29,11 @@ import static org.mockito.Mockito.when;
 public class HotThreadsTests extends ESTestCase {
 
     public void testSupportedThreadsReportType() {
-        for (var type: new String[] {"unsupported", "", null, "CPU", "WAIT", "BLOCK" }) {
+        for (String type: new String[] {"unsupported", "", null, "CPU", "WAIT", "BLOCK" }) {
             expectThrows(IllegalArgumentException.class, () -> new HotThreads().type(type));
         }
 
-        for (var type : new String[] { "cpu", "wait", "block" }) {
+        for (String type : new String[] { "cpu", "wait", "block" }) {
             try {
                 new HotThreads().type(type);
             } catch (IllegalArgumentException e) {
@@ -54,21 +55,21 @@ public class HotThreadsTests extends ESTestCase {
     }
 
     public void testIdleThreadsDetection() {
-        for (var threadName : new String[] { "Signal Dispatcher", "Finalizer", "Reference Handler" }) {
+        for (String threadName : new String[] { "Signal Dispatcher", "Finalizer", "Reference Handler" }) {
             ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
             when(mockedThreadInfo.getThreadName()).thenReturn(threadName);
             assertTrue(HotThreads.isIdleThread(mockedThreadInfo));
         }
 
-        for (var threadName : new String[] { "Notification Thread", "Common-Cleaner" }) {
+        for (String threadName : new String[] { "Notification Thread", "Common-Cleaner" }) {
             ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
             when(mockedThreadInfo.getThreadName()).thenReturn(threadName);
             when(mockedThreadInfo.getStackTrace()).thenReturn(new StackTraceElement[0]);
             assertFalse(HotThreads.isIdleThread(mockedThreadInfo));
         }
 
-        var testJvmStack = makeThreadStackHelper(
-            List.of(
+        List<StackTraceElement> testJvmStack = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodThree"},
@@ -81,8 +82,8 @@ public class HotThreadsTests extends ESTestCase {
 
         assertFalse(HotThreads.isIdleThread(notIdleThread));
 
-        var idleThreadStackElements = makeThreadStackHelper(
-            List.of(
+        List<StackTraceElement> idleThreadStackElements = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"java.util.concurrent.ThreadPoolExecutor", "getTask"},
                 new String[]{"sun.nio.ch.SelectorImpl", "select"},
                 new String[]{"org.elasticsearch.threadpool.ThreadPool$CachedTimeThread", "run"},
@@ -90,22 +91,22 @@ public class HotThreadsTests extends ESTestCase {
                 new String[]{"java.util.concurrent.LinkedTransferQueue", "poll"}
             ));
 
-        for (var extraFrame : idleThreadStackElements) {
+        for (StackTraceElement extraFrame : idleThreadStackElements) {
             ThreadInfo idleThread = mock(ThreadInfo.class);
             when(idleThread.getThreadName()).thenReturn("Idle Thread");
             when(idleThread.getStackTrace()).thenReturn(new StackTraceElement[] {extraFrame});
             assertTrue(HotThreads.isIdleThread(idleThread));
 
-            var topOfStack = new ArrayList<>(testJvmStack);
+            List<StackTraceElement> topOfStack = new ArrayList<>(testJvmStack);
             topOfStack.add(0, extraFrame);
             assertIdleThreadHelper(idleThread, topOfStack);
 
-            var bottomOfStack = new ArrayList<>(testJvmStack);
+            List<StackTraceElement> bottomOfStack = new ArrayList<>(testJvmStack);
             bottomOfStack.add(extraFrame);
             assertIdleThreadHelper(idleThread, bottomOfStack);
 
             if (testJvmStack.size() > 1) {
-                var middleOfStack = new ArrayList<>(testJvmStack);
+                List<StackTraceElement> middleOfStack = new ArrayList<>(testJvmStack);
                 middleOfStack.add(between(Math.min(1, testJvmStack.size()), Math.max(0, testJvmStack.size() - 1)), extraFrame);
                 assertIdleThreadHelper(idleThread, middleOfStack);
             }
@@ -113,26 +114,26 @@ public class HotThreadsTests extends ESTestCase {
     }
 
     public void testSimilarity() {
-        var stackOne = makeThreadStackHelper(
-            List.of(
+        StackTraceElement[] stackOne = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
-        var stackTwo = makeThreadStackHelper(
-            List.of(
+        StackTraceElement[] stackTwo = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"org.elasticsearch.monitor.test1", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
             )).toArray(new StackTraceElement[0]);
 
-        var stackThree = makeThreadStackHelper(
-            List.of(
+        StackTraceElement[] stackThree = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"}
             )).toArray(new StackTraceElement[0]);
 
-        var stackFour = makeThreadStackHelper(
-            List.of(
+        StackTraceElement[] stackFour = makeThreadStackHelper(
+            Arrays.asList(
                 new String[]{"org.elasticsearch.monitor.testPrior", "methodOther"},
                 new String[]{"org.elasticsearch.monitor.test", "methodOne"},
                 new String[]{"org.elasticsearch.monitor.testOther", "methodTwo"}
@@ -153,7 +154,7 @@ public class HotThreadsTests extends ESTestCase {
             }
         }
 
-        var testCases = new SimilarityTestCase[] {
+        SimilarityTestCase[] testCases = new SimilarityTestCase[] {
             new SimilarityTestCase(stackOne, stackOne, 2),
             new SimilarityTestCase(stackOne, stackTwo, 1),
             new SimilarityTestCase(stackOne, stackThree, 0),
@@ -162,7 +163,7 @@ public class HotThreadsTests extends ESTestCase {
             new SimilarityTestCase(stackOne, new StackTraceElement[0], 0),
         };
 
-        for (var testCase : testCases) {
+        for (SimilarityTestCase testCase : testCases) {
             ThreadInfo threadOne = mock(ThreadInfo.class);
             when(threadOne.getThreadName()).thenReturn("Thread One");
             when(threadOne.getStackTrace()).thenReturn(testCase.one);
@@ -185,7 +186,7 @@ public class HotThreadsTests extends ESTestCase {
     private List<ThreadInfo> makeThreadInfoMocksHelper(ThreadMXBean mockedMXBean, long[] threadIds) {
         List<ThreadInfo> allInfos = new ArrayList<>(threadIds.length);
 
-        for (var threadId : threadIds) {
+        for (long threadId : threadIds) {
             // We first return 0 for all timings, then a true value to create the reporting deltas.
             when(mockedMXBean.getThreadCpuTime(threadId)).thenReturn(0L).thenReturn(threadId);
             ThreadInfo mockedThreadInfo = mock(ThreadInfo.class);
@@ -203,8 +204,8 @@ public class HotThreadsTests extends ESTestCase {
 
             when(mockedThreadInfo.getThreadId()).thenReturn(threadId);
 
-            var stack = makeThreadStackHelper(
-                List.of(
+            StackTraceElement[] stack = makeThreadStackHelper(
+                Arrays.asList(
                     new String[]{"org.elasticsearch.monitor.test", String.format(Locale.ROOT, "method_%d", (threadId) % 2)},
                     new String[]{"org.elasticsearch.monitor.testOther", "methodFinal"}
                 )).toArray(new StackTraceElement[0]);
@@ -220,12 +221,12 @@ public class HotThreadsTests extends ESTestCase {
         ThreadMXBean mockedMXBean = mock(ThreadMXBean.class);
         when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
 
-        var threadIds = new long[] { 1, 2, 3, 4 }; // Adds up to 10, the intervalNanos for calculating time percentages
+        long[] threadIds = new long[] { 1, 2, 3, 4 }; // Adds up to 10, the intervalNanos for calculating time percentages
         long mockCurrentThreadId = 0L;
         when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
 
         List<ThreadInfo> allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        var cpuOrderedInfos = List.of(allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
+        List<ThreadInfo> cpuOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(2), allInfos.get(1), allInfos.get(0));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(cpuOrderedInfos.toArray(new ThreadInfo[0]));
 
         HotThreads hotThreads = new HotThreads()
@@ -235,7 +236,7 @@ public class HotThreadsTests extends ESTestCase {
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
-        var innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+        String innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
         assertThat(innerResult, containsString("Hot threads at "));
         assertThat(innerResult, containsString("interval=10nanos, busiestThreads=4, ignoreIdleThreads=false:"));
@@ -264,10 +265,10 @@ public class HotThreadsTests extends ESTestCase {
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        var waitOrderedInfos = List.of(allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
+        List<ThreadInfo> waitOrderedInfos = Arrays.asList(allInfos.get(3), allInfos.get(1), allInfos.get(0), allInfos.get(2));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(waitOrderedInfos.toArray(new ThreadInfo[0]));
 
-        var waitInnerResult = hotWaitingThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+        String waitInnerResult = hotWaitingThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
         assertThat(waitInnerResult, containsString("40.0% (4nanos out of 10nanos) wait usage by thread 'Thread 4'"));
         assertThat(waitInnerResult, containsString("20.0% (2nanos out of 10nanos) wait usage by thread 'Thread 2'"));
@@ -282,10 +283,10 @@ public class HotThreadsTests extends ESTestCase {
             .ignoreIdleThreads(false);
 
         allInfos = makeThreadInfoMocksHelper(mockedMXBean, threadIds);
-        var blockOrderedInfos = List.of(allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
+        List<ThreadInfo> blockOrderedInfos = Arrays.asList(allInfos.get(2), allInfos.get(0), allInfos.get(1), allInfos.get(3));
         when(mockedMXBean.getThreadInfo(Matchers.any(), anyInt())).thenReturn(blockOrderedInfos.toArray(new ThreadInfo[0]));
 
-        var blockInnerResult = hotBlockedThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+        String blockInnerResult = hotBlockedThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
         assertThat(blockInnerResult, containsString("30.0% (3nanos out of 10nanos) block usage by thread 'Thread 3'"));
         assertThat(blockInnerResult, containsString("10.0% (1nanos out of 10nanos) block usage by thread 'Thread 1'"));
@@ -298,7 +299,7 @@ public class HotThreadsTests extends ESTestCase {
         when(mockedMXBean.isThreadCpuTimeSupported()).thenReturn(true);
 
         long mockCurrentThreadId = 5L;
-        var threadIds = new long[] { mockCurrentThreadId }; // Matches half the intervalNanos for calculating time percentages
+        long[] threadIds = new long[] { mockCurrentThreadId }; // Matches half the intervalNanos for calculating time percentages
 
         when(mockedMXBean.getAllThreadIds()).thenReturn(threadIds);
 
@@ -312,8 +313,8 @@ public class HotThreadsTests extends ESTestCase {
             .threadElementsSnapshotCount(11)
             .ignoreIdleThreads(false);
 
-        var innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
+        String innerResult = hotThreads.innerDetect(mockedMXBean, mockCurrentThreadId);
 
-        assertEquals(1, innerResult.lines().count());
+        assertEquals(1, innerResult.split("\r\n|\r|\n").length);
     }
 }
